[gd_scene load_steps=2 format=3 uid="uid://directorcreation123"]

[ext_resource type="Script" path="res://scripts/ui/DirectorCreationScreen.gd" id="1_script"]

[node name="DirectorCreationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "Step 1 of 6"
horizontal_alignment = 1

[node name="StepContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NameStep" type="VBoxContainer" parent="VBoxContainer/StepContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer/StepContainer/NameStep"]
layout_mode = 2
text = "Basic Information"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer/StepContainer/NameStep"]
layout_mode = 2
text = "Name:"

[node name="NameInput" type="LineEdit" parent="VBoxContainer/StepContainer/NameStep"]
layout_mode = 2
placeholder_text = "John Smith"
text = "John Smith"

[node name="BirthYearLabel" type="Label" parent="VBoxContainer/StepContainer/NameStep"]
layout_mode = 2
text = "Birth Year:"

[node name="BirthYearSpinBox" type="SpinBox" parent="VBoxContainer/StepContainer/NameStep"]
layout_mode = 2
min_value = 1960.0
max_value = 2005.0
value = 1985.0

[node name="NationalityLabel" type="Label" parent="VBoxContainer/StepContainer/NameStep"]
layout_mode = 2
text = "Nationality:"

[node name="NationalityInput" type="LineEdit" parent="VBoxContainer/StepContainer/NameStep"]
layout_mode = 2
placeholder_text = "English"
text = "English"

[node name="BackgroundStep" type="VBoxContainer" parent="VBoxContainer/StepContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer/StepContainer/BackgroundStep"]
layout_mode = 2
text = "Choose Your Background"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/StepContainer/BackgroundStep"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackgroundList" type="VBoxContainer" parent="VBoxContainer/StepContainer/BackgroundStep/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ArchetypeStep" type="VBoxContainer" parent="VBoxContainer/StepContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer/StepContainer/ArchetypeStep"]
layout_mode = 2
text = "Choose Your Archetype"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/StepContainer/ArchetypeStep"]
layout_mode = 2
size_flags_vertical = 3

[node name="ArchetypeList" type="VBoxContainer" parent="VBoxContainer/StepContainer/ArchetypeStep/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StrengthsStep" type="VBoxContainer" parent="VBoxContainer/StepContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer/StepContainer/StrengthsStep"]
layout_mode = 2
text = "Choose 2 Strengths"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/StepContainer/StrengthsStep"]
layout_mode = 2
size_flags_vertical = 3

[node name="StrengthsList" type="VBoxContainer" parent="VBoxContainer/StepContainer/StrengthsStep/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FlawStep" type="VBoxContainer" parent="VBoxContainer/StepContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer/StepContainer/FlawStep"]
layout_mode = 2
text = "Choose Your Fatal Flaw"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/StepContainer/FlawStep"]
layout_mode = 2
size_flags_vertical = 3

[node name="FlawList" type="VBoxContainer" parent="VBoxContainer/StepContainer/FlawStep/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SummaryStep" type="VBoxContainer" parent="VBoxContainer/StepContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer/StepContainer/SummaryStep"]
layout_mode = 2
text = "Your Director Profile"
horizontal_alignment = 1

[node name="VBox" type="HBoxContainer" parent="VBoxContainer/StepContainer/SummaryStep"]
layout_mode = 2
size_flags_vertical = 3

[node name="SummaryText" type="Label" parent="VBoxContainer/StepContainer/SummaryStep/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Summary here"
vertical_alignment = 1

[node name="StatsPreview" type="Label" parent="VBoxContainer/StepContainer/SummaryStep/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stats here"
vertical_alignment = 1

[node name="DescriptionPanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/DescriptionPanel"]
layout_mode = 2
text = "Description appears here..."
autowrap_mode = 3

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "< Back"

[node name="NextButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next >"

[node name="FinishButton" type="Button" parent="VBoxContainer/ButtonContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Begin Your Career"
